--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@angular/cli": "~11.0.6",
     "@angular/compiler-cli": "~11.0.7",
     "@angular/language-service": "~11.0.7",
-    "@types/node": "~14.14.20",
     "@types/jasmine": "~3.6.2",
     "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~14.14.20",
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
@@ -44,6 +44,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.2",
-    "typescript": "~4.1.3"
+    "typescript": "^4.0.5"
   }
 }
