--- a/angular.json
+++ b/angular.json
@@ -129,8 +129,13 @@
               "devServerTarget": "personalsite:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "personalsite"
 }
