--- a/.github/deploy-site.yaml
+++ b/.github/deploy-site.yaml
@@ -1,10 +1,10 @@
-name: CI/CD
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -32,8 +32,8 @@ jobs:
 
     - name: Deploy
       run: |
-        git config --global user.name bobbyrune94
-        git config --global user.email bobbyrune94@gmail.com
+        git config --global user.name $user_name
+        git config --global user.email $user_email
         git remote set-url origin https://${github_token}@github.com/${repository}
         npm run deploy
       env:
